Final-Project/akka-io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.md
---
description: ''
knowledge_type: official_documentation
scraped_at: '2026-04-06T13:40:10Z'
section: japi
site: akka-io
source_url: https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html
title: ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$
---

# ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$

## Content

Package [akka.cluster.sharding](package-summary.html)
## Class ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$

- java.lang.Object
- - akka.cluster.sharding.ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$

- Enclosing class:
[ClusterShardingSettings.CompositePassivationStrategy$](ClusterShardingSettings.CompositePassivationStrategy$.html "class in akka.cluster.sharding")

---

```
public static class ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$
extends java.lang.Object
```

- - ### Field Summary
	
	
	
	Fields 
	| Modifier and Type | Field | Description |
	| `static [ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$](ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html "class in akka.cluster.sharding")` | `[MODULE$](#MODULE$)` | Static reference to the singleton instance of this Scala object. |

	- ### Constructor Summary
	
	
	
	Constructors 
	| Constructor | Description |
	| `[AdmissionOptimizer$](#%3Cinit%3E())()` |  |

	- ### Method Summary
	
	
	
	All Methods [Instance Methods](javascript:show(2);) [Concrete Methods](javascript:show(8);) 
	| Modifier and Type | Method | Description |
	| `akka.cluster.sharding.ClusterShardingSettings.CompositePassivationStrategy.AdmissionOptimizer` | `[apply](#apply(scala.Option))​(scala.Option<akka.cluster.sharding.ClusterShardingSettings.PassivationStrategySettings.AdmissionSettings.OptimizerSettings> optimizerSettings)` |  |
	
	
		- ### Methods inherited from class java.lang.Object
		
		
		`clone, equals, finalize, getClass, hashCode, notify, notifyAll, toString, wait, wait, wait`

- - ### Field Detail
	
	
	
		- #### MODULE$
		
		
		
		```
		public static final [ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$](ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html "class in akka.cluster.sharding") MODULE$
		```
		
		Static reference to the singleton instance of this Scala object.

	- ### Constructor Detail
	
	
	
		- #### AdmissionOptimizer$
		
		
		
		```
		public AdmissionOptimizer$()
		```

	- ### Method Detail
	
	
	
		- #### apply
		
		
		
		```
		public akka.cluster.sharding.ClusterShardingSettings.CompositePassivationStrategy.AdmissionOptimizer apply​(scala.Option<akka.cluster.sharding.ClusterShardingSettings.PassivationStrategySettings.AdmissionSettings.OptimizerSettings> optimizerSettings)
		```

## Related Pages (Internal Links)

- https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html
- https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.html
- https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/package-summary.html

---
*Source: [https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html](https://doc.akka.io/japi/akka-core/2.10/akka/cluster/sharding/ClusterShardingSettings.CompositePassivationStrategy$.AdmissionOptimizer$.html)*